[project]
name = "reasoning-ledger-sdk"
version = "0.1.0"
license = "MIT"
description = "reasoning-ledger-sdk is a Python SDK for interacting with the Reasoning Ledger."
readme = "README.md"
authors = [
    { name = "Arslan Ablikim", email = "arslan.ablikim0@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13.3",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
