[project]
name = "reasoning-ledger"
version = "0.3.0"
license = "MIT"
description = "Python SDK for interacting with the Reasoning Ledger."
readme = "README.md"
authors = [
    { name = "Arslan Ablikim", email = "arslan.ablikim0@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13.3",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.9",
    "ty>=0.0.3",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["src/reasoning_ledger/generated"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "RUF", "PERF", "S"]
ignore = ["S101"]
