[project]
name = "reasoning-ledger-integration-tests"
version = "0.0.0"
description = "Integration tests for the reasoning-ledger PyPI SDK against the staging API."
requires-python = ">=3.12"
dependencies = [
    "reasoning-ledger>=0.1.0",
    "httpx>=0.27",
    "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
